# cs205-FinalProject

./: .gitignore  LICENSE  README.md  evals.py  extract_data.py  main.py  preprocessing.py  unet.py
boruvka/: Boruvka.hpp  Boruvka_parallel.hpp  CMakeLists.txt  DisjointSet.hpp  Graph.hpp  Makefile  README.md  boruvka_main.cpp  boruvka_main_parallel.cpp  centOs_install.sh  install.sh  run_boruvka_cell.sh  run_boruvka_test.sh
otsu/: README.md
otsu/otsu_basline/: CMakeLists.txt  otsu.cpp
otsu/otsu_ompi/: CMakeLists.txt  otsu_ompi.cpp
otsu/otsu_openmp/: CMakeLists.txt  otsu_openmp.cpp
otsu/otsu_openmp_algo/: otsu_openmp.cpp
unet/: README.md  clean.py  evals.py  load_data.py  main.py  main_predict.py  main_spark.py  requirements.txt  setup.sh  test.py  unet.py
unet/data/: README.md
unet/outs/: README.md
unet/outs/results/: README.md
